# game_2048

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
QTCPP2048/: QTCPP2048.sln
QTCPP2048/QTCPP2048/: Block.cpp  Block.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QTCPP2048.vcxproj  QTCPP2048.vcxproj.filters  main.cpp
QtCpp2048/: CMakeLists.txt  main.cpp
QtCpp2048/core/: Block.cpp  Block.h  MainWindow.cpp
QtCpp2048/include/: MainWindow.h
QtCpp2048/ui/: MainWindow.cpp  MainWindow.h
core/: Block.cpp  MainWindow.cpp
include/: Block.h  MainWindow.h
src/: Block.cpp  Block.h  CalculationBlock.cpp  CalculationBlock.h  Framework.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
test/: test.cpp  unittest.h
ui/: MainWindow.ui
